--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="nav-links">
                 <a href="#Account">Аккаунт</a>
                 <a href="#">Социальные сети</a>
-                <a href="https://danil-del.github.io/dogpageEN/"><button class="btnlang">RUS</button></a>
+                <a href="https://danil-del.github.io/dogpageEN/"><button class="btnlang">EN</button></a>
             </div>
             <nav class="navbar">
                 <button class="burger" id="burger" aria-label="Открыть меню">
